--- a/roles/mikeandwan_us/tasks/main.yml
+++ b/roles/mikeandwan_us/tasks/main.yml
@@ -49,16 +49,23 @@
       become: true
       become_user: "{{ mawus_config.service_account.username }}"
 
-- name: Include maw_maintenance.yml
+- name: Initialize self signed certificates
   ansible.builtin.include_tasks:
-    file: maw_maintenance.yml
+    file: maw_certs.yml
     apply:
       become: true
       become_user: "{{ mawus_config.service_account.username }}"
 
-- name: Initialize self signed certificates
+- name: Obtain self signed certificate passwords
   ansible.builtin.include_tasks:
-    file: maw_certs.yml
+    file: maw_certs_get_pwds.yml
+    apply:
+      become: true
+      become_user: "{{ mawus_config.service_account.username }}"
+
+- name: Include maw_maintenance.yml
+  ansible.builtin.include_tasks:
+    file: maw_maintenance.yml
     apply:
       become: true
       become_user: "{{ mawus_config.service_account.username }}"
