--- a/roles/mikeandwan_us/tasks/maw_migrate_volume_data.yml
+++ b/roles/mikeandwan_us/tasks/maw_migrate_volume_data.yml
@@ -3,14 +3,23 @@
   containers.podman.podman_volume_info:
     name: "{{ migvol_orig_volume_name }}"
   register: migvol_orig
-  failed_when: false
+  ignore_errors: true
+
+- name: set flag to indicate if we should migrate data
+  ansible.builtin.set_fact:
+    migvol_do_migrate: "{{ (not migvol_orig.failed) and (migvol_orig.volumes | length > 0) }}"
 
 - name: copy data if original volume exists
   ansible.builtin.include_role:
     name: podman_alpine
-  when: migvol_orig.volumes | length > 0
+  when: migvol_do_migrate
   vars:
     alpine_command: "{{ migvol_command }}"
     alpine_volumes:
       - "{{ migvol_orig_volume_name }}:/src:ro,z"
       - "{{ migvol_new_volume_name }}:/dest:rw,z"
+
+- name: set return value to indicate if data was migrated
+  ansible.builtin.set_fact:
+    "{{ migvol_result_varname }}": "{{ migvol_do_migrate }}"
+  when: (migvol_result_varname is defined) and (migvol_result_varname is truthy)
