--- a/inventories/host_vars/vmtest2.yml
+++ b/inventories/host_vars/vmtest2.yml
@@ -4,3 +4,23 @@ ansible_user: mmorano
 # base
 hostname: vmtest2
 update_packages: no
+
+external_vars_root: "{{ lookup('env', 'HOME') }}/ansible/hosts/{{ hostname }}"
+ddclient_secrets_file: "{{ external_vars_root }}/ddclient_secrets.yml"
+
+# -------------------------------------
+# ddclient
+# -------------------------------------
+ddclient_config:
+  remote_home_dir: /home/svc_ddclient
+  systemd_dir: /home/svc_ddclient/.config/systemd/user
+  service_account:
+    username: svc_ddclient
+    password: "{{ vault_password_svc_ddclient }}"
+    groups:
+    subuid: 300000-365536
+    subgid: 300000-365536
+    enable_linger: true
+  podman_podname: ddclient-pod
+  podman_container_name: ddclient-container
+  namecheap_password: "{{ vault_namecheap_password }}"
