--- a/playbook_ddclient.yml
+++ b/playbook_ddclient.yml
@@ -34,6 +34,8 @@
     - name: Configure ddclient
       ansible.builtin.include_role:
         name: ddclient
+        apply:
+          become: true
+          become_user: "{{ ddclient_config.service_account.username }}"
       vars:
-        ddclient_svc_account: "{{ ddclient_config.service_account.username }}"
         ddclient_namecheap_password: "{{ ddclient_config.namecheap_password }}"
