--- a/inventories/host_vars/lvmtest.yml
+++ b/inventories/host_vars/lvmtest.yml
@@ -7,6 +7,10 @@ hostname: lvmtest
 update_packages: no
 
 # ddclient
+dd__tmp_dir: /home/svc_ddclient
+dd__systemd_dir: /home/svc_ddclient/.config/systemd/user
+dd__namecheap_password: "{{ vault_namecheap_password }}"
+
 ddclient_config:
   service_account:
     username: svc_ddclient
@@ -15,4 +19,3 @@ ddclient_config:
     subuid: 200000-265536
     subgid: 200000-265536
     enable_linger: true
-  namecheap_password: "{{ vault_namecheap_password }}"
