--- a/inventories/host_vars/vmtest2.yml
+++ b/inventories/host_vars/vmtest2.yml
@@ -11,9 +11,11 @@ ddclient_secrets_file: "{{ external_vars_root }}/ddclient_secrets.yml"
 # -------------------------------------
 # ddclient
 # -------------------------------------
+dd__tmp_dir: /home/svc_ddclient
+dd__systemd_dir: /home/svc_ddclient/.config/systemd/user
+dd__namecheap_password: "{{ vault_namecheap_password }}"
+
 ddclient_config:
-  remote_home_dir: /home/svc_ddclient
-  systemd_dir: /home/svc_ddclient/.config/systemd/user
   service_account:
     username: svc_ddclient
     password: "{{ vault_password_svc_ddclient }}"
@@ -21,6 +23,3 @@ ddclient_config:
     subuid: 300000-365536
     subgid: 300000-365536
     enable_linger: true
-  podman_podname: ddclient-pod
-  podman_container_name: ddclient-container
-  namecheap_password: "{{ vault_namecheap_password }}"
