update var conventions for fedora_base role

--- a/inventories/host_vars/tifa.yml
+++ b/inventories/host_vars/tifa.yml
@@ -1,6 +1,6 @@
 ansible_user: mmorano
 
-hostname: tifa
+fed_b__hostname: tifa
 
 external_vars_root: "{{ lookup('env', 'HOME') }}/ansible/hosts/{{ hostname }}"
 ddclient_secrets_file: "{{ external_vars_root }}/ddclient_secrets.yml"
