--- a/inventories/host_vars/lvmtest.yml
+++ b/inventories/host_vars/lvmtest.yml
@@ -3,8 +3,7 @@ ansible_host: 192.168.122.138
 ansible_user: mmorano
 
 # base
-hostname: lvmtest
-update_packages: no
+fed_b__hostname: lvmtest
 
 # ddclient
 dd__tmp_dir: /home/svc_ddclient
