--- a/inventories/host_vars/vmtest2.yml
+++ b/inventories/host_vars/vmtest2.yml
@@ -2,8 +2,7 @@ ansible_host: 192.168.122.245
 ansible_user: mmorano
 
 # base
-hostname: vmtest2
-update_packages: no
+fed_b__hostname: vmtest2
 
 external_vars_root: "{{ lookup('env', 'HOME') }}/ansible/hosts/{{ hostname }}"
 ddclient_secrets_file: "{{ external_vars_root }}/ddclient_secrets.yml"
