--- a/inventories/host_vars/vmwstest.yml
+++ b/inventories/host_vars/vmwstest.yml
@@ -2,15 +2,17 @@
 ansible_host: 192.168.122.247
 ansible_user: mmorano
 
+# fedora base
 fed_b__hostname: vmwstest
 
-update_packages: true
-android_studio: true
-aws_cli: true
-azure_cli: true
-azure_data_studio: false
-google_chrome: true
-google_earth: true
-ms_teams: true
-powershell: true
-vscode: true
+# fedora workstation
+fed_w__update_packages: true
+fed_w__android_studio: true
+fed_w__aws_cli: true
+fed_w__azure_cli: true
+fed_w__azure_data_studio: false
+fed_w__google_chrome: true
+fed_w__google_earth: true
+fed_w__ms_teams: true
+fed_w__powershell: true
+fed_w__vscode: true
