update variable conventions for firewall role

--- a/playbook_mawus_prod.yml
+++ b/playbook_mawus_prod.yml
@@ -20,7 +20,7 @@
       ansible.builtin.include_role:
         name: firewall
       vars:
-        firewall_allowed_services:
+        fw__allowed_services:
           - http
           - https
 
