--- a/playbook_ddclient.yml
+++ b/playbook_ddclient.yml
@@ -28,8 +28,8 @@
       ansible.builtin.include_role:
         name: podman_init
       vars:
-        podman_users:
-          - "{{ ddclient_config.service_account }}"
+        pod_init__linger_users:
+          - "{{ ddclient_config.service_account.username }}"
 
     - name: Configure ddclient
       ansible.builtin.include_role:
