--- a/roles/postgres_optimize/tasks/main.yml
+++ b/roles/postgres_optimize/tasks/main.yml
@@ -1,17 +1,11 @@
 ---
 - name: Set facts for systemd_job role
   ansible.builtin.set_fact:
-    service_template: "{{ role_path }}/templates/postgres_optimize.service.j2"
-    timer_template: "{{ role_path }}/templates/postgres_optimize.timer.j2"
+    sysd_job__service_template: "{{ role_path }}/templates/postgres_optimize.service.j2"
+    sysd_job__timer_template: "{{ role_path }}/templates/postgres_optimize.timer.j2"
+    sysd_job__systemd_dir: "{{ pg_optimize_ctx.systemd_dir }}"
+    sysd_job__service: "{{ pg_optimize_ctx.service_name }}"
 
 - name: Configure systemd job to optimize database
   ansible.builtin.include_role:
     name: systemd_job
-  vars:
-    systemd_job_ctx:
-      systemd_dir: "{{ pg_optimize_ctx.systemd_dir }}"
-      service_name: "{{ pg_optimize_ctx.service_name }}"
-      start_job: "{{ pg_optimize_ctx.start_job }}"
-      enable_job: "{{ pg_optimize_ctx.enable_job }}"
-      service_template: "{{ service_template }}"
-      timer_template: "{{ timer_template }}"
