--- a/roles/postgres_backup_cleanup/tasks/main.yml
+++ b/roles/postgres_backup_cleanup/tasks/main.yml
@@ -3,8 +3,8 @@
   ansible.builtin.set_fact:
     sysd_job__service_template: "{{ role_path }}/templates/postgres_backup_cleanup.service.j2"
     sysd_job__timer_template: "{{ role_path }}/templates/postgres_backup_cleanup.timer.j2"
-    sysd_job__systemd_dir: "{{ pg_cleanup_ctx.systemd_dir }}"
-    sysd_job__service: "{{ pg_cleanup_ctx.service_name }}"
+    sysd_job__systemd_dir: "{{ pg_clean__systemd_dir }}"
+    sysd_job__service: "{{ pg_clean__service }}"
 
 - name: Configure systemd job for database backup cleanup
   ansible.builtin.include_role:
